Fix alignment and margins of info section

--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 32px 256px;
+    padding: 32px 256px 96px 256px;
 }
 
 .info-title {
@@ -92,10 +92,17 @@ body {
 
 .info-image {
     margin: 32px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .info-image img {
+    border: 5px solid ;
+    border-radius: 15px;
+    border-color:#3882F6;
     width: 200px;
+    margin-bottom: 8px;
 }
 
 .caption {
